--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,6 +13,13 @@
         android:theme="@style/Theme.Scoliocare"
         tools:targetApi="31">
         <activity
+            android:name=".RVActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".EventEditActivity"
             android:exported="false">
             <meta-data
